Fix: Docker setup and env
