# app/controllers/tasks_controller.rb
@@ -96,7 +96,7 @@ class TasksController < ApplicationController
   end
 
   def task_params
-    params.require(:task).permit(:title, :description, :completed)
+    params.require(:task).permit(:title, :description, :completed, :due_date)
   end
 
   def authorize_create
